--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx ex2.ts",
-    "build": "tsc ex.ts"
+    "dev": "tsx ex1B.ts",
+    "build": "tsc ex2B.ts"
   },
   "keywords": [],
   "author": "",
